WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213269
WebKitTestRunner should not crash on alert with invalid utf16 strings
https://bugs.webkit.org/show_bug.cgi?id=213269
Summary
WebKitTestRunner should not crash on alert with invalid utf16 strings
Keith Miller
Reported
2020-06-16 16:24:47 PDT
WebKitTestRunner should not crash on alert with invalid utf16 strings
Attachments
Patch
(3.24 KB, patch)
2020-06-16 16:25 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Patch for landing
(3.23 KB, patch)
2020-06-17 09:52 PDT
,
Keith Miller
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Keith Miller
Comment 1
2020-06-16 16:25:08 PDT
Created
attachment 402054
[details]
Patch
Yusuke Suzuki
Comment 2
2020-06-16 17:54:09 PDT
Comment on
attachment 402054
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402054&action=review
> LayoutTests/fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html:2 > + alert(String.fromCharCode(0xd800));
I recommend putting js-test-pre and js-test-post to avoid using rendering test like the above -expected.txt.
Keith Miller
Comment 3
2020-06-17 09:52:42 PDT
Created
attachment 402120
[details]
Patch for landing
EWS
Comment 4
2020-06-17 10:28:20 PDT
Committed
r263164
: <
https://trac.webkit.org/changeset/263164
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402120
[details]
.
Radar WebKit Bug Importer
Comment 5
2020-06-17 10:29:18 PDT
<
rdar://problem/64453630
>
Radar WebKit Bug Importer
Comment 6
2020-06-17 10:29:19 PDT
<
rdar://problem/64453632
>
Yusuke Suzuki
Comment 7
2020-06-18 16:34:54 PDT
Committed
r263245
: <
https://trac.webkit.org/changeset/263245
>
Yusuke Suzuki
Comment 8
2020-06-18 18:04:30 PDT
Committed
r263249
: <
https://trac.webkit.org/changeset/263249
>
Fujii Hironori
Comment 9
2020-06-21 21:44:36 PDT
(In reply to Yusuke Suzuki from
comment #8
)
> Committed
r263249
: <
https://trac.webkit.org/changeset/263249
>
Filed :
Bug 213452
– [Win][WTR] fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html is failing
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug