WebKitTestRunner should not crash on alert with invalid utf16 strings https://bugs.webkit.org/show_bug.cgi?id=213269

Reviewed by Simon Fraser.

Tools:

* WebKitTestRunner/StringFunctions.h:
(WTR::toWTFString):

LayoutTests:

* fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash-expected.txt: Added.
* fast/dom/Window/alert-with-unmatched-utf16-surrogate-should-not-crash.html: Added.


Canonical link: https://commits.webkit.org/226094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263164 268f45cc-cd09-0410-ab3c-d52691b4dbfc