Tools/WebKitTestRunner/StringFunctions.h
@@ -89,6 +89,8 @@ inline WTF::String toWTFString(WKStringRef string)
     size_t bufferSize = WKStringGetMaximumUTF8CStringSize(string);
     auto buffer = makeUniqueWithoutFastMallocCheck<char[]>(bufferSize);
     size_t stringLength = WKStringGetUTF8CStringNonStrict(string, buffer.get(), bufferSize);
+    if (!stringLength)
+        return "(null)"_s;
     return WTF::String::fromUTF8WithLatin1Fallback(buffer.get(), stringLength - 1);
 }
     
